# NSColourMap

./: .gitignore  AGENTS.md  CMakeLists.txt  NSColourMap_COLORS_Chroma_Chimera_Spec_v0.5.md  README.md
.github/workflows/: build.yml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
Source/dsp/: AffectedRange.h  AlgoModes.h  CharacterModes.h  ChromaDetector.h  ColourMappingCore.h  ColourProcessor.h  MidiChordState.h  PseudoFormantTone.h  ResonatorBank.h  SafetyLimiter.h  ScaleNoteSet.h  SpectralMapper.h  SpectrumAnalyzer.h  SubSplitter.h  TargetNoteGenerator.h  TransientDetector.h
assets/: placeholder.txt
docs/: ClaudeCode_Tasks.md  DSP_Notes.md  NSColourMap_Spec.md  Research_Notes.md  Routing_Guide.md
samples/: README.md
tests/: DspSmoke.cpp  OfflineCheck.cpp
tools/: RenderAudioSamples.cpp  Screenshot.cpp  host-screenshots-cloudflared.sh
